--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 
     <context-param>
         <param-name>dbURL</param-name>
-        <param-value>jdbc:mysl://localhost:3306/student?createDatabaseIfNotExist=true</param-value>
+        <param-value>jdbc:mysql://localhost:3306/student?createDatabaseIfNotExist=true</param-value>
     </context-param>
 
     <context-param>
@@ -23,4 +23,7 @@
         <param-name>dbPassword</param-name>
         <param-value>Ijse@1234</param-value>
     </context-param>
+
+
+
 </web-app>
