--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>1.18.34</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>yasson</artifactId>
+            <version>3.0.3</version>
+        </dependency>
     </dependencies>
 
     <build>
