Created CROS origin issue by developing CROSFilter

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,5 +25,11 @@
     </context-param>
 
 
+    <context-param>
+        <param-name>origin</param-name>
+        <param-value>http://localhost:63342</param-value>
+    </context-param>
+
+
 
 </web-app>
